Fix bug where subscribe button wrong height while subscribing

--- a/src/Assets/Styles/Components/Common/subscribe-button.scss
+++ b/src/Assets/Styles/Components/Common/subscribe-button.scss
@@ -7,7 +7,7 @@
   height: 35px;
   line-height: 0.9em;
   box-shadow: 4px 4px 0 rgba(0, 0, 0, 0.25);
-  max-width: 128px;
+  width: 128px;
 
   &.unsubscribe {
     background-color: #f6c821;
